--- a/CSS/about.css
+++ b/CSS/about.css
@@ -14,6 +14,9 @@
     width: 100%;
     height: 500px;
   }
+  .about_afrifood-wrapper h1{
+    font-size: 4rem;
+  }
   .about_afrifood-wrapper div {
     flex-basis: 55%;
     /* align-self: center; */
