--- a/CSS/media.css
+++ b/CSS/media.css
@@ -1,6 +1,27 @@
+:root {
+  /* colors */
+  --body-color: #dfe6e8;
+  --color-pinkswan: #b6b6b6;
+  --deeplightblue-color: #f2f8f8;
+  --lightpink-color: #ffa3a3;
+  --orange-color: #ffa500;
+  --white-color: #ffffff;
+  --black-color: #000000;
+  /* font-families */
+  --font-family: "Lato", sans-serif;
+  /* font-size */
+  --xxlfont-size: 4rem;
+  --xlfont-size: 3.5rem;
+  --lgfont-size: 2.5rem;
+  --mdfont-size: 2rem;
+  --smfont-size: 1.5rem;
+  --xsfont-size: 1.25rem;
+  --xxsfont-size: 1.1rem;
+}
+
 @media screen and (max-width: 1024px) {
   .logo--name {
-    font-size: 1rem;
+    font-size: var(--xxsfont-size);
   }
   .logo {
     width: 80px;
@@ -22,6 +43,15 @@
 @media screen and (max-width: 1020px) {
   .min_wrapper {
     grid-template-columns: repeat(2, 315px);
+  }
+}
+@media screen and (max-width: 900px) {
+  .reviewCard_image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.6rem;
+    margin-bottom: 0.8rem;
   }
 }
 @media screen and (max-width: 768px) {
@@ -67,6 +97,10 @@
     line-height: 3.2rem;
   }
   /* food section */
+  .subTitle {
+    font-size: var(--mdfont-size);
+    line-height: var(--mdfont-size);
+  }
   .min_wrapper {
     grid-template-columns: repeat(2, 270px);
   }
@@ -92,10 +126,14 @@
   .nav-btn {
     display: none;
   }
-  .slide{
+  .slide {
     flex-direction: column;
-}
-
+  }
+  /* contact page */
+  .contact-page__title,
+  .about_afrifood-wrapper  h1 {
+    font-size: var(--mdfont-size);
+  }
 }
 @media screen and (max-width: 576px) {
   /* banner--section */
@@ -120,6 +158,10 @@
 
   .footer_wrapper div + .footer_wrapper div {
     margin-top: 10px;
+  }
+  /* contact--page */
+  .contactPage_wrapper {
+    flex-direction: column-reverse;
   }
 }
 @media screen and (max-width: 425px) {
@@ -153,11 +195,14 @@
     font-size: 0.9rem;
     line-height: 0.9rem;
   }
+  /* contact--page */
+  .addressIcons__items {
+    flex-direction: column;
+  }
 }
-@media screen and (max-width:250px) {
+@media screen and (max-width: 250px) {
   .banner--qoute {
     left: 30px;
-    /* font-size: 2rem; */
     line-height: 2.5rem;
   }
   .min_wrapper {
