--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@400;600&display=swap");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
+
 *,
 ::after,
 ::before {
@@ -12,13 +13,15 @@
   --body-color: #dfe6e8;
   --color-pinkswan: #b6b6b6;
   --deeplightblue-color: #f2f8f8;
-  --lightpink-color: #ffa3a3;
+  --shadedpink-color: #ff2a6b;
+  --lightpink-color: #ff2a6b;
   --orange-color: #ffa500;
   --white-color: #ffffff;
   --black-color: #000000;
-  --warning-color:#ff0000;
+  --warning-color: #ff0000;
   /* font-families */
   --font-family: "Lato", sans-serif;
+  --font-family-poppins: "Poppins", sans-serif;
   /* font-size */
   --xxlfont-size: 4rem;
   --xlfont-size: 3.5rem;
@@ -58,8 +61,8 @@ a {
   border-radius: 40px;
   cursor: pointer;
 }
-.btn-login {
-  background: #8c99dd;
+.btn-color {
+  background: var(--shadedpink-color);
 }
 .btn-signup {
   background: #b7b7b7;
@@ -67,7 +70,8 @@ a {
 /* nav section */
 .nav_wrapper {
   padding: 0.8rem 1.2rem;
-  background-color: var(--color-pinkswan);
+  background-color: var(--shadedpink-color);
+  color: var(--white-color);
   max-width: 1220px;
   width: 100%;
   margin: 0 auto;
@@ -76,7 +80,7 @@ a {
 }
 .logo--name {
   font-size: 2rem;
-  color: var(--primary-color);
+  color: var(--white-color);
 }
 .logo {
   max-width: 100px;
@@ -95,22 +99,22 @@ a {
   display: flex;
   justify-content: space-between;
   padding: 20px;
-  background: var(--lightpink-color);
-  border-radius: 27px;
 }
 .nav_listItem + .nav_listItem {
   margin-left: 50px;
 }
 .nav_listItem a {
-  color: var(--primary-color);
+  color: var(--white-color);
   text-transform: uppercase;
   text-decoration: none;
   cursor: pointer;
   font-size: 1.1rem;
   font-family: var(--font-family);
 }
-.nav_listItem:hover {
-  background: #fff;
+.nav_listItem a:hover {
+  box-sizing: border-box;
+  background: var(--white-color);
+  color: var(--black-color);
   padding: 2px 15px;
   border-radius: 10px;
   cursor: pointer;
@@ -123,15 +127,14 @@ a {
   padding: 5px 10px;
   display: none;
   position: absolute;
-  background-color: var(--lightpink-color);
+  background-color: var(--shadedpink-color);
   box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.41);
-  color:var(--white-color);
+  color: var(--white-color);
+  opacity: 1;
   z-index: 1;
-  /* overflow: auto; */
 }
 .dropdown-options a {
   display: block;
-
 }
 .menu--item:hover .dropdown-options {
   display: block;
@@ -145,7 +148,6 @@ a {
 }
 /* banner design */
 .banner {
-  
   height: 80vh;
   background-image: url("https://res.cloudinary.com/dvfszvcxa/image/upload/q_70/v1679294104/top-view-food-frame-with-copy-space_n5lucc.jpg");
   background-size: cover;
@@ -172,7 +174,7 @@ a {
   align-items: center;
 }
 .subTitle {
-  font-family: var(--font-family);
+  font-family: var(--font-family-poppins);
   font-size: var(--xlfont-size);
   line-height: var(--xlfont-size);
   margin: 0.7rem 0 1.3rem;
@@ -192,19 +194,36 @@ a {
   align-items: center;
   justify-content: center;
   gap: 2rem;
+  transition: 1s;
+  transition-timing-function: ease-in-out;
 }
+
 .food-img {
   width: 100%;
   height: 237px;
+  object-fit: cover;
 }
 .min_wrapper-box {
+  height: 470px;
   box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.41);
 }
 .min_wrapper-box div {
   padding: 1rem;
 }
 .readMore {
-  color: var(--lightpink-color);
+  color: var(--shadedpink-color);
+}
+.navigate_wrapper {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+.navigate {
+  background-color: var(--shadedpink-color);
+  color: var(--white-color);
+  padding: 7px;
+  /* text-align: center; */
 }
 /* food--slider */
 
@@ -212,10 +231,9 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--deeplightblue-color);
+  background-color: var(--shadedpink-color);
 }
 .foodSlider_wrapper {
-
   position: relative;
   display: flex;
   max-width: 800px;
@@ -224,22 +242,37 @@ a {
   overflow: hidden;
 }
 .slide {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  position: relative;
   width: 100%;
   height: 100%;
+  margin: 0 auto;
   padding: 30px;
-  gap: 2rem;
-  background-color: var(--lightpink-color);
-  color: var(--white-color);
-  border-radius: 50px;
   overflow: hidden;
 }
 .slide img {
-  max-width: 200px;
   width: 100%;
-  border-radius: 50px;
+  height: 405px;
+  object-fit: cover;
+ 
+}
+.slide_info {
+  position: absolute;
+  bottom: 22px;
+}
+.slide_title {
+  padding: 15px 25px;
+  background-color: var(--white-color);
+  color: var(--shadedpink-color);
+}
+.slide_info::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -36px;
+  width: 0;
+  border-width: 32px 18px;
+  border-style: solid;
+  border-color: #fff transparent transparent #fff;
 }
 /* Swiper css */
 .nav-btn {
@@ -267,7 +300,6 @@ a {
 /* reviews */
 .reviews {
   padding: 2rem 0;
-  /* background-color: #000; */
 }
 .reviews_wrapper {
   width: 90%;
@@ -283,7 +315,7 @@ a {
   max-width: 315px;
   width: 100%;
   box-sizing: border-box;
-  background-color: rgb(242, 248, 248);
+  /* background-color: rgb(242, 248, 248); */
   box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.41);
   padding: 30px 15px;
   border-radius: 10px;
@@ -338,7 +370,8 @@ a {
 }
 /* footer */
 footer {
-  background-color: var(--color-pinkswan);
+  background-color: var(--shadedpink-color);
+  color: var(--white-color);
   max-width: 1220px;
   width: 100%;
   margin: 0 auto;
@@ -409,5 +442,35 @@ footer {
   font-size: var(--xsfont-size);
   line-height: 24px;
 }
-
-
+/*  */
+.hero_section {
+  padding: 100px 0;
+  margin-bottom: 2rem;
+  background-image: url("../Assets/page-top-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  text-align: center;
+}
+.hero_title {
+  display: inline-block;
+  border-radius: 5px;
+  padding: 0 20px;
+  margin: 0 auto;
+  background-color: #ff2a6b;
+  color: #fff;
+  font-size: 48px;
+  font-weight: bold;
+  box-shadow: 0px 90px 100px rgba(0, 0, 0, 0.4);
+  animation: zoomIn 0.75s linear both;
+}
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    transform: scale(0, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
+  }
+}
