--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -4,7 +4,6 @@
 .contactPage_wrapper {
   display: flex;
   justify-content: space-between;
-  background-color: rgb(242, 248, 248);
   box-shadow: inset -1.4px -1.4px 2px rgba(0, 0, 0, 0.3);
 }
 .contact-page__title{
@@ -13,7 +12,7 @@
 .send--message {
   padding: 20px;
   flex-basis: 40%;
-  background-color: #ffa3a3;
+  background-color: var(--shadedpink-color);  
 }
 .send--message h2 {
   margin-bottom: 1rem;
@@ -23,6 +22,7 @@
   flex-direction: column;
   gap: 1rem;
 }
+
 .input-row{
   display: flex;
   flex-direction: column;
@@ -55,13 +55,25 @@
     flex-basis: 55%;
     padding: 20px;
 }
-.address{
-    padding-top: 10px;
-}
 .addressIcons__items{
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  margin-top:  1rem;
 }
+.address-link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  margin-right: 1rem;
+  border-radius: 50px;
+  background-color: var(--white-color);
+  color: var(--shadedpink-color);
+  box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.41);
+    /* padding-top: 10px; */
+}
+
 @media screen and (max-width:768px) {
   .countact-page__title{
     font-size: var(--mdfont-size);
