--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,93 +1,103 @@
 footer {
-    background-color: var(--shadedpink-color);
-    color: var(--white-color);
-    max-width: 1220px;
-    width: 100%;
-    margin: 0 auto;
-  }
-  
+  background-color: var(--shadedpink-color);
+  color: var(--white-color);
+  max-width: 1220px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.footer_wrapper {
+  width: 90%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-between;
+  gap: 4rem;
+  padding: 2rem 0rem;
+}
+.footer__logo {
+  display: flex;
+  flex-direction: column;
+}
+.subscribe {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-top: 5px;
+}
+
+.subscribe input {
+  border: none;
+  margin-right: 0.2rem;
+  padding: 15px 40px;
+  border-radius: 50px;
+  max-width: 227px;
+  width: 100%;
+}
+.subscribe .btn {
+  padding: 15px 40px;
+  width: 100%;
+  font-size: var(--xxsfont-size);
+}
+.subscribe input:focus {
+  outline: none;
+}
+.footer--title {
+  font-size: var(--mdfont-size);
+  line-height: 40px;
+}
+.footer--list {
+  padding: 0;
+}
+.footer--listItems + .footer--listItems {
+  margin-top: 8px;
+}
+.footer--listItems a {
+  color: var(--black-color);
+}
+.footer--listItems a:hover {
+  color: var(--white-color);
+}
+.socialIcons {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.social-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  background-color: var(--white-color);
+  color: var(--shadedpink-color);
+}
+
+.copy {
+  border-top: 1px solid var(--black-color);
+  padding: 0.5rem 1rem;
+  text-align: center;
+  font-family: var(--font-family);
+  font-size: var(--xsfont-size);
+  line-height: 24px;
+}
+@media screen and (max-width: 576px) {
   .footer_wrapper {
-    width: 90%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    justify-content: space-between;
-    gap: 4rem;
-    padding: 2rem 0rem;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: left;
+    column-gap: 2rem;
+    row-gap: 0.4rem;
   }
-  .footer__logo {
-    display: flex;
-    flex-direction: column;
+
+  .footer_wrapper div + .footer_wrapper div {
+    margin-top: 10px;
   }
-  .subscribe {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    margin-top: 5px;
+}
+@media screen and (max-width: 425px) {
+  .footer_wrapper {
+    grid-template-columns: repeat(1, 1fr);
+    align-items: center;
+    justify-content: center;
   }
-  
-  .subscribe input {
-    border: none;
-    margin-right: 0.2rem;
-    padding: 15px 40px;
-    border-radius: 50px;
-    max-width: 227px;
-    width: 100%;
-  }
-  .subscribe .btn {
-    padding: 15px 40px;
-    width: 100%;
-    font-size: var(--xxsfont-size);
-  }
-  .subscribe input:focus {
-    outline: none;
-  }
-  .footer--title {
-    font-size: var(--mdfont-size);
-    line-height: 40px;
-  }
-  
-  .socialIcons {
-    display: flex;
-    flex-direction: column;
-  }
-  .footer--list {
-    padding: 0;
-  }
-  .footer--listItems + .footer--listItems {
-    margin-top: 8px;
-  }
-  .footer--listItems a {
-    color: var(--black-color);
-  }
-  .footer--listItems a:hover {
-    color: var(--white-color);
-  }
-  .copy {
-    border-top: 1px solid var(--black-color);
-    padding: 0.5rem 1rem;
-    text-align: center;
-    font-family: var(--font-family);
-    font-size: var(--xsfont-size);
-    line-height: 24px;
-  }
-  @media screen and (max-width:576px)  {
-    .footer_wrapper {
-        grid-template-columns: repeat(2, 1fr);
-        justify-items: left;
-        column-gap: 2rem;
-        row-gap: 0.4rem;
-      }
-    
-      .footer_wrapper div + .footer_wrapper div {
-        margin-top: 10px;
-      }    
-  }
-  @media screen and (max-width:425px) {
-    .footer_wrapper {
-        grid-template-columns: repeat(1, 1fr);
-        align-items: center;
-        justify-content: center;
-      }
-    
-  }
+}
