--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,6 +33,7 @@
 body {
   background-color: var(--body-color);
 }
+
 li {
   list-style: none;
 }
@@ -69,9 +70,8 @@ a {
   box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.41);
   cursor: pointer;
   transition: all 0.5s;
-
 }
-.bxs-arrow-to-top{
+.bxs-arrow-to-top {
   font-size: var(--xxsfont-size);
 }
 /* common for all */
@@ -152,7 +152,7 @@ a {
   content: "";
   position: absolute;
   top: 0;
-  right: -36px;
+  right: -35px;
   width: 0;
   border-width: 32px 18px;
   border-style: solid;
@@ -164,6 +164,7 @@ a {
   border-radius: 50%;
   transform: translateY(10px);
   background-color: rgba(0, 0, 0, 0.9);
+  color: var(--white-color);
   transition: 0.2s;
 }
 .slide-btn:hover {
@@ -206,18 +207,28 @@ a {
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  transition: 1s;
-  transition-timing-function: ease-in-out;
+}
+.min_wrapper-box {
+  height: 370px;
+  box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.41);
 }
 
 .food-img {
   width: 100%;
   height: 237px;
   object-fit: cover;
+  animation: slide ease-in-out 4s;
 }
-.min_wrapper-box {
-  height: 370px;
-  box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.41);
+
+@keyframes slide {
+  0% {
+    opacity: 0;
+    /* bottom: 10px; */
+  }
+  100% {
+    opacity: 1;
+    /* bottom: 0; */
+  }
 }
 .food-name {
   font-family: var(--font-family-poppins);
